# realbot-4

./: .breakpoints  keep_alive.py  main.py  pyproject.toml
assests/: assests.py  paginator.py
cogs/: economy.py  error.py  eval.py  fun.py  help.py  listeners.py  misc.py  slashcommands.py
dicts/: currcount.json  deleted.json  economy.json  economyshop.json  edited.json
templates/: index.html
